apps/cradle/website/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cradle-website
  namespace: cradle
spec:
  selector:
    app: cradle-website
  ports:
    - port: 80
      targetPort: 3001
